Change title of views/restaurant/menus/edit.html.erb to bold

--- a/app/views/restaurant/menus/edit.html.erb
+++ b/app/views/restaurant/menus/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-11 offset-1">
 
       <div class="menu_edit">
-        <h4 class="col-md-4 mt-5">メニュー編集</h4>
+        <h4 class="col-md-4 mt-5"><strong>メニュー編集</strong></h4>
 
         <div class='flashing mt-2'>
           <p>※現在登録されているデータは架空です</p>
