Change title of views/restaurant/menus/new.html.erb to bold

--- a/app/views/restaurant/menus/new.html.erb
+++ b/app/views/restaurant/menus/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class='col-10 offset-2'>
       <div class="row">
-        <h4 class="col-md-3 mt-5">メニュー新規登録</h4>
+        <h4 class="col-md-3 mt-5"><strong>メニュー新規登録</strong></h4>
       </div>
 
 　　　<div class='flashing mt-2'>
