Change title of views/admin/allergies/edit.html.erb to bold

--- a/app/views/admin/allergies/edit.html.erb
+++ b/app/views/admin/allergies/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class='col-12'>
-      <h4 class="col-md-5 mt-5">アレルゲン編集</h4>
+      <h4 class="col-md-5 mt-5"><strong>アレルゲン編集</strong></h4>
       <% flash.each do |key, value| %>
          <p class="alert alert-<%= key %>">
            <%= value %>
