--- a/app/views/admin/allergies/index.html.erb
+++ b/app/views/admin/allergies/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class='col-12'>
-      <h4 class="col-3 mt-5">アレルゲン一覧・追加</h4>
+      <h4 class="col-3 mt-5"><strong>アレルゲン一覧・追加</strong></h4>
       <% flash.each do |key, value| %>
          <p class="alert alert-<%= key %>">
            <%= value %>
