--- a/app/views/admin/areas/show.html.erb
+++ b/app/views/admin/areas/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class='col-12'>
-      <h4 class="col-3 mt-5 offset-2"><%= @state.state %></h4>
+      <h4 class="col-3 mt-5 offset-2"><strong><%= @state.state %></strong></h4>
 
       <div class="row">
         <table class="table table-hover col-8 mt-3 offset-2">
