--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h4 class="col-6 mt-5"><%= "#{@customer.full_name}さんの会員情報編集" %></h4>
+      <h4 class="col-6 mt-5"><strong><%= "#{@customer.full_name}さんの会員情報編集" %></strong></h4>
       <% flash.each do |key, value| %>
          <p class="alert alert-<%= key %>">
            <%= value %>
