Change title of views/admin/customers/show.html.erb to bold

--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -4,7 +4,7 @@
       <% if flash[:notice] %>
         <%= notice %>
       <% end %>
-      <h4 class="col-6 mt-5"><%= "#{@customer.full_name}さんの会員詳細" %></h4>
+      <h4 class="col-6 mt-5"><strong><%= "#{@customer.full_name}さんの会員詳細" %></strong></h4>
 
       <div class='flashing mt-2'>
         <p>※現在登録されているデータは架空です</p>
