--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-10 offset-1">
-      <h4 class="col-2 mt-5">飲食店会員一覧</h4>
+      <h4 class="col-2 mt-5"><strong>飲食店会員一覧</strong></h4>
       <% flash.each do |key, value| %>
          <p class="alert alert-<%= key %>">
            <%= value %>
