--- a/app/views/admin/restaurants/show.html.erb
+++ b/app/views/admin/restaurants/show.html.erb
@@ -4,7 +4,7 @@
       <% if flash[:notice] %>
         <%= notice %>
       <% end %>
-      <h4 class="col-6 mt-5"><%= "#{@restaurant.name}の店舗詳細" %></h4>
+      <h4 class="col-6 mt-5"><strong><%= "#{@restaurant.name}の店舗詳細" %></strong></h4>
 
       <div class='flashing mt-2'>
         <p>※現在登録されているデータは架空です</p>
